Add robots.txt file for search engine crawling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nasaspace-apps",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.1.4",
+    "@emailjs/browser": "^4.4.1",
+    "@fontsource/roboto": "^5.1.0",
+    "@gsap/react": "^2.1.1",
+    "@react-spring/web": "^9.7.4",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.9",
+    "@use-gesture/react": "^10.3.1",
+    "framer-motion": "^11.11.1",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "three": "^0.169.0"
   },
   "devDependencies": {
