--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
+    "@react-spring/three": "^9.7.4",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "framer": "^2.4.1",
