--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
     "@emailjs/browser": "^4.4.1",
     "@fontsource/roboto": "^5.1.0",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.4",
+    "@react-spring/three": "^9.7.4",
     "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "@use-gesture/react": "^10.3.1",
-    "framer-motion": "^11.11.1",
+    "framer": "^2.4.1",
+    "framer-motion": "^10.13.1",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
-    "@react-spring/three": "^9.7.4",
-    "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.9",
-    "framer": "^2.4.1",
     "motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.26.2",
     "three": "^0.169.0"
   },
   "devDependencies": {
